# HyperBot

./: .gitignore  README.md
Hyperbot/: .env  .env.prod  README.md  bot.py  persona_manager.py  personas.json  pyproject.toml  requirements.txt  test.py  test_siliconflow.py
Hyperbot/.claude/: settings.local.json
Hyperbot/Hyperbot/plugins/Heartflow/: QUICKSTART.md  README.md  __init__.py  config.py
Hyperbot/Hyperbot/plugins/deepseek/: README_OPTIMIZATIONS.md  __init__.py  api_pool.py  cache_manager.py  group_blacklist.txt  group_context_manager.py  memory_config.py  memory_graph.py  memory_optimization_config.py  usage_example.py
Hyperbot/Hyperbot/plugins/deepseek/personas/: cat_girl.txt  cool_guy.txt  custom_example.txt  cute_girl.txt  default.txt  ds.txt  funny_friend.txt  personas.json  wise_elder.txt
Hyperbot/Hyperbot/plugins/knowledge/: __init__.py  knowledge_processor.py
Hyperbot/Hyperbot/plugins/solvecode/: README.md  __init__.py  使用说明.txt  更新日志.md
Hyperbot/docs/: 图数据库记忆系统安装和配置指南.md  基于Neo4j的图数据库长期记忆系统设计.md
LLOneBot-win-x64-ffmpeg/: pmhq_config.json
LLOneBot-win-x64-ffmpeg/data/: config_1010411661.json  config_1634384467.json
LLOneBot-win-x64-ffmpeg/data/database/: 1010411661.db  1634384467.db
LLOneBot-win-x64-ffmpeg/llonebot/: llonebot.js  llonebot.js.map
LLOneBot-win-x64-ffmpeg/llonebot/webui/: index.html
LLOneBot-win-x64-ffmpeg/llonebot/webui/assets/: index-ac7b4744.js
